{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 47,
  "lineage": "2504e8ed-5ed3-004e-ff69-fa29b8c58793",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0036b08880f45794c",
            "association_id": "eipassoc-09767c2653e101759",
            "domain": "vpc",
            "id": "eipalloc-0036b08880f45794c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-002f2b8873448cdbd",
            "private_dns": "ip-10-0-3-63.ec2.internal",
            "private_ip": "10.0.3.63",
            "public_dns": "ec2-3-89-239-152.compute-1.amazonaws.com",
            "public_ip": "3.89.239.152",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575208196154:internet-gateway/igw-0c2cff21de0feab12",
            "id": "igw-0c2cff21de0feab12",
            "owner_id": "575208196154",
            "tags": {
              "Name": "eks-igw"
            },
            "tags_all": {
              "Name": "eks-igw"
            },
            "vpc_id": "vpc-0faf25e52470d1818"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0036b08880f45794c",
            "connectivity_type": "public",
            "id": "nat-038722937939043d7",
            "network_interface_id": "eni-002f2b8873448cdbd",
            "private_ip": "10.0.3.63",
            "public_ip": "3.89.239.152",
            "subnet_id": "subnet-033deaa150c20e257",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.eks-igw",
            "aws_subnet.eks-public-us1a",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575208196154:route-table/rtb-00a6ecacc2ab256d2",
            "id": "rtb-00a6ecacc2ab256d2",
            "owner_id": "575208196154",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-038722937939043d7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0faf25e52470d1818"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.eks-igw",
            "aws_nat_gateway.nat",
            "aws_subnet.eks-public-us1a",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575208196154:route-table/rtb-03d90f330625e0fcf",
            "id": "rtb-03d90f330625e0fcf",
            "owner_id": "575208196154",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c2cff21de0feab12",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0faf25e52470d1818"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eks-igw",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0501b717633820206",
            "route_table_id": "rtb-00a6ecacc2ab256d2",
            "subnet_id": "subnet-0b69352c587bda85d"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.eks-igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.eks-private-us1a",
            "aws_subnet.eks-public-us1a",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd4975631e4ced83",
            "route_table_id": "rtb-00a6ecacc2ab256d2",
            "subnet_id": "subnet-0b94d20cdc013e61c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.eks-igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.eks-private-us1b",
            "aws_subnet.eks-public-us1a",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce9f529ed80e992f",
            "route_table_id": "rtb-03d90f330625e0fcf",
            "subnet_id": "subnet-033deaa150c20e257"
          },
          "dependencies": [
            "aws_internet_gateway.eks-igw",
            "aws_route_table.public",
            "aws_subnet.eks-public-us1a",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e95a6a172635faa",
            "route_table_id": "rtb-03d90f330625e0fcf",
            "subnet_id": "subnet-08fbef4398a8eb8ac"
          },
          "dependencies": [
            "aws_internet_gateway.eks-igw",
            "aws_route_table.public",
            "aws_subnet.eks-public-us1b",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks-private-us1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575208196154:subnet/subnet-0b69352c587bda85d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b69352c587bda85d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "575208196154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-private-subnet-1a",
              "kubernetes.io./cluster/eks-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-private-subnet-1a",
              "kubernetes.io./cluster/eks-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0faf25e52470d1818"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks-private-us1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575208196154:subnet/subnet-0b94d20cdc013e61c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b94d20cdc013e61c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "575208196154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-private-subnet-1b",
              "kubernetes.io./cluster/eks-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-private-subnet-1b",
              "kubernetes.io./cluster/eks-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0faf25e52470d1818"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks-public-us1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575208196154:subnet/subnet-033deaa150c20e257",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033deaa150c20e257",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "575208196154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-public-subnet-1a",
              "kubernetes.io./cluster/eks-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-public-subnet-1a",
              "kubernetes.io./cluster/eks-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0faf25e52470d1818"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks-public-us1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575208196154:subnet/subnet-08fbef4398a8eb8ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fbef4398a8eb8ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "575208196154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eks-public-subnet-1b",
              "kubernetes.io./cluster/eks-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-public-subnet-1b",
              "kubernetes.io./cluster/eks-demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0faf25e52470d1818"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:575208196154:vpc/vpc-0faf25e52470d1818",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04ad9df96463d1073",
            "default_route_table_id": "rtb-064d723f6ed4495a0",
            "default_security_group_id": "sg-0dc722ccfd77821a6",
            "dhcp_options_id": "dopt-099dda73",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0faf25e52470d1818",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-064d723f6ed4495a0",
            "owner_id": "575208196154",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          }
        }
      ]
    }
  ]
}